--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+li {
+  list-style: none;
+}
+.delete-btn {
+  float: right
+}
+.login-btn {
+  margin: 5px;
+}
