--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,5 +1,28 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
+
+li {
+    list-style: none;
+}
+
+.delete-btn {
+    float: right
+}
+
+.login-btn {
+    margin: 5px;
+}
+
+.btn-gallery-save {
+    margin-top: 5px;
+}
+
+/* .home-page {
+    color: white;
+    background-image: url("./img/landing-page.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+} */
